fixed issue with overflow ImageShowDialog.razor

--- a/WebApp/WebApp/wwwroot/css/app.css
+++ b/WebApp/WebApp/wwwroot/css/app.css
@@ -1,6 +1,12 @@
-/*
+﻿/*
  Progress loading
  */
+
+html, body {
+    /* disable pull-to-reload */
+    overscroll-behavior-y: contain;
+}
+
 
 .progress-wrapper {
     position: absolute;
